--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.2</version>
+		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.vyoma</groupId>
-	<artifactId>quiz-app</artifactId>
+	<groupId>com.telusko</groupId>
+	<artifactId>quizapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>quiz-app</name>
-	<description>Demo project for Spring Boot</description>
+	<name>quizapp</name>
+	<description>Telusko Quiz App</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
